Finalizando os exercícios das aulas

--- a/HTML5-CSS3/Aulas/aula002/aula002.html
+++ b/HTML5-CSS3/Aulas/aula002/aula002.html
@@ -31,6 +31,8 @@
     <p> <!--- EMOJIPEDIA -->
         Vamos adicionar alguns emojis: &#x1F596 &#x1f468 &#x1F4BB
     </p>
-
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
