--- a/HTML5-CSS3/Aulas/aula003/aula003.html
+++ b/HTML5-CSS3/Aulas/aula003/aula003.html
@@ -23,5 +23,8 @@
         Também podemos caregar imagens externas
     </p>
     <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Imagem do logo JavaScript">
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
