--- a/HTML5-CSS3/Aulas/aula006/aula006.html
+++ b/HTML5-CSS3/Aulas/aula006/aula006.html
@@ -62,5 +62,8 @@
     <p>
         Usa a tag SUB para inseri coisas do tipo H<sub>2</sub>O.
     </p>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
