--- a/HTML5-CSS3/Aulas/aula007/aula007.html
+++ b/HTML5-CSS3/Aulas/aula007/aula007.html
@@ -48,5 +48,8 @@
     <p>
         <bdo dir="rtl">Estou aprendendo a criar coisas em HTML.</bdo>
     </p>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
