--- a/HTML5-CSS3/Aulas/aula012/aula012.html
+++ b/HTML5-CSS3/Aulas/aula012/aula012.html
@@ -21,5 +21,8 @@
     <p style="text-align: justify;">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium libero omnis quisquam cumque reiciendis perferendis ullam porro autem optio? Provident maxime veniam amet fuga sunt corporis natus et, repellendus totam!
     </p>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
