--- a/HTML5-CSS3/Aulas/aula004/aula004.html
+++ b/HTML5-CSS3/Aulas/aula004/aula004.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <h1>Olha o favicon aqui em cima!</h1>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
