--- a/HTML5-CSS3/Aulas/aula008/aula008.html
+++ b/HTML5-CSS3/Aulas/aula008/aula008.html
@@ -84,6 +84,9 @@
         <dt>CSS</dt>
             <dd>Linguagem de marcação para a criação do design de um site.</dd>
         <dt>JavaScript</dt>
-            <dd>Çinguagem de programação para a criação de interatividade de um site.</dd>
+            <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
+        <p>
+            <a href="../index.html">Voltar</a>
+        </p>
     </body>
 </html>
