--- a/HTML5-CSS3/Aulas/aula010/aula010.html
+++ b/HTML5-CSS3/Aulas/aula010/aula010.html
@@ -29,5 +29,8 @@
             Seu navegador não suporta áudio. <a href="audios/guanacast-33.mp3" download="guanacast-33.mp3" type="audio/mpeg"> Baixe o vídeo aqui</a>.
         </p>
     </audio>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
