--- a/HTML5-CSS3/Aulas/aula011/aula011.html
+++ b/HTML5-CSS3/Aulas/aula011/aula011.html
@@ -11,12 +11,19 @@
     <p>
         Este vídeo esta hospedado no meu próprio sevidor.
     </p>
-    <video poster="videos/limoes-capa.png" controls autoplay loop width="560px">
+    <video loop controls poster="Images/limoes-capa.png" width="560px">
         <source src="videos/meu-video.mp4" type="video/mp4">
+        <source src="videos/meu-video.m4v" type="video/mp4">
         <source src="videos/meu-video.webm" type="video/webm">
-        <source src="videos/meu-video.ogv" type="video/ogg">
+        <source src="videos/meu-video.ogg" type="video/ogg">
+        <p>Seu navegador não é compatível com vídeo.</p>
     </video>
-    <h1>Inserindo vídeos do Youtube</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ejkb_YpuHWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls; allowfullscreen></iframe>
+    <h1>Inserindo videos do Youtube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3hng-hmSv2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1>Inserindo vídeos do Vimeo</h1>
+    <iframe src="https://player.vimeo.com/video/30153918?h=41df38731f&autoplay=1&loop=1&byline=0&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <p>
+        <a href="../index.html">Voltar</a>
+    </p>
 </body>
 </html>
