font-size and font-family

--- a/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.html
+++ b/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Cores</h1>
-    <h2>Círculo Cromático</h2>
-    <img src="Images/circulo-cromatico.png" alt="circulo-cromatico" width="300px">
+    <h2 class="h2terciaria">Círculo Cromático</h2>
+    <div class="circle"></div>
     <h2>Cores Primárias</h2>
     <div class="primarias">
         <div class="azul"></div>
