--- a/HTML5-CSS3/Modulo02/Aulas/aula010/index.html
+++ b/HTML5-CSS3/Modulo02/Aulas/aula010/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Pseudo-classes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quadrado">
-        <div class="circulo"></div>
-    </div>
-    <div class="bolinha"></div>
+    <div id="d1">01</div>
+    <div id="d2">02</div>
+    <div id="d3">03</div>
 </body>
 </html>
