--- a/HTML5-CSS3/Modulo02/Desafios/desafio10/android.html
+++ b/HTML5-CSS3/Modulo02/Desafios/desafio10/android.html
@@ -7,6 +7,7 @@
     <title>Como surgiu o mascote do Android?</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,13 +16,13 @@
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
         </p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale conosco</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
-    </nav>
     <main>
         <article>
             <h1>História do Mascote do Android</h1>
@@ -66,7 +67,9 @@
                 A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             
             <aside>
                 <h3>Quer aprender mais?</h3>
@@ -124,7 +127,7 @@
                 </p>
 
                 <p>
-                    Acesse aqui o site <a class="externo" href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema <strong>Android</strong>.
+                    Acesse aqui o site <span><a class="externo" href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank">Android History</a></span> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema <strong>Android</strong>.
                 </p>
             </aside>
 
