--- a/HTML5-CSS3/Modulo03/ex023/table/table2.html
+++ b/HTML5-CSS3/Modulo03/ex023/table/table2.html
@@ -12,54 +12,44 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-            border: 5px solid darkblue;
-        }
-
-        tr.line {
-            background-color: gray;
         }
 
         td {
             border: 1px solid black;
             padding: 10px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.yellow {
-            background-color: yellow
+        .number {
+            text-align: right;
         }
-
-        
 
     </style>
 </head>
 <body>
-    <h1>My first table</h1>
-    <!--
-        TABLE HIERARCHY
-            table
-                table header
-                    table data
-    -->
+    <h1>Tables</h1>
     <table>
         <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="line">
+        <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="number">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="number">C3</td>
         </tr>
         <tr>
             <td>A4</td>
-            <td class="yellow">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
     </table>
