--- a/HTML5-CSS3/Modulo03/ex023/table/table3.html
+++ b/HTML5-CSS3/Modulo03/ex023/table/table3.html
@@ -15,6 +15,14 @@
             border-collapse: collapse;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+            border: 1px solid black;
+        }
+
         td, th {
             border: 1px solid black;
             padding: 10px;
@@ -43,10 +51,11 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População por Estado</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População (2021)</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 200px;">População (2021)</th>
             </tr>
         </thead>
         <tbody>
@@ -161,7 +170,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="number">
                     <strong>210 147 125</strong>
                 </td>
