--- a/HTML5-CSS3/Modulo03/ex023/table/table3.html
+++ b/HTML5-CSS3/Modulo03/ex023/table/table3.html
@@ -33,6 +33,10 @@
             color: white;
         }
 
+        tbody > tr:nth-child(2n) { /*even, odd*/
+            background-color: lightgray;
+        }
+
         .number{
             text-align: right;
         }
