srcdoc in inframe

--- a/HTML5-CSS3/Modulo04/exercises/iframe003.html
+++ b/HTML5-CSS3/Modulo04/exercises/iframe003.html
@@ -35,7 +35,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis animi dolore ipsam, odio, quos, accusamus suscipit eveniet inventore tenetur maiores a. Eum doloremque est perferendis tempore distinctio inventore voluptatem! Ipsum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus saepe magni iste. Illum recusandae, eum nam quibusdam, asperiores molestiae accusantium non, natus itaque et eos aliquid totam dolor ratione cumque?</p>
 
-    <iframe src="" name="frame" frameborder="1">
+    <iframe srcdoc="<h1>Make a choice</h1>" name="frame" frameborder="1">
 
     </iframe>
 
