--- a/HTML5-CSS3/Modulo04/exercises/iframe005.html
+++ b/HTML5-CSS3/Modulo04/exercises/iframe005.html
@@ -16,7 +16,7 @@
     <h1>My main website</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste impedit aliquam itaque ex aperiam, tempore consequuntur necessitatibus. Ipsa veritatis, iure impedit sint laboriosam, voluptatibus quod tempora eius exercitationem non nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae commodi vero excepturi laboriosam porro, consequuntur beatae doloribus dolor voluptates exercitationem obcaecati rerum officia id illum autem accusantium enim quos odio?</p>
 
-    <iframe src="pagesTest/pag004.html" frameborder="1" sandbox="allow-same-origin allow-forms" referrerpolicy="no-referrer"></iframe>
+    <iframe src="pagesTest/pag004.html" frameborder="1" sandbox="allow-same-origin allow-scripts" referrerpolicy="no-referrer"></iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel alias, libero quam possimus ratione nulla cumque pariatur ipsam quasi at beatae voluptate amet deleniti molestias illum explicabo voluptates ea est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quis esse, deserunt optio veritatis repellat numquam in doloremque ipsam iusto sapiente molestiae deleniti ad magni earum, totam maiores quaerat ullam.</p>
 </body>
