--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq002/index.html
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq002/index.html
@@ -5,7 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Media query </title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/style.css" media="all">
+        <link rel="stylesheet" href="styles/portrait.css" media="screen and (orientation:portrait)">
+        <link rel="stylesheet" href="styles/landscape.css" media="screen and (orientation:landscape)">
       </head>
 <body>
     <h1>Change the orietation of your mobile</h1>
