project media query with mobile first

--- a/HTML5-CSS3/Modulo04/projects/responsive-site/index.html
+++ b/HTML5-CSS3/Modulo04/projects/responsive-site/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile First</title>
+    <title>Responsive site</title>
+    <link rel="stylesheet" href="styles/style.css" media="all">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Try Media Queries</h1>
+        <img id="phone" src="assets/images/icon-phone.png" alt="acess by smartphone">
+        <img id="tablet" src="assets/images/icon-tablet.png" alt="acess by tablet">
+        <img id="print" src="assets/images/icon-print.png" alt="version to print">
+        <img id="pc" src="assets/images/icon-pc.png" alt="acess by desktop">
+        <img id="tv" src="assets/images/icon-tv.png" alt="acess by TV">
+    </main>
 </body>
 </html>
