Starting project responsive menu with mobile first

--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>My site</h1>
+        <h1>Responsive Menu</h1>
         <menu>
             <ul>
                 <li>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <article>
-            <h2>Trying pedia queries</h2>
+            <h2>Trying media queries</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
