Adding burger menu

--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Menu</title>
     <link rel="stylesheet" href="sytles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <h1>Responsive Menu</h1>
+        <span id="icon-menu" class="material-symbols-outlined">
+            menu
+        </span>
         <menu>
             <ul>
                 <li>
@@ -29,7 +33,7 @@
     </header>
     <main>
         <article>
-            <h2>Trying media queries</h2>
+            <h2>Testing media queries</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, totam! Corporis repudiandae laborum, debitis iste libero soluta quos, doloribus ea quam voluptatum fugiat. Id exercitationem eveniet, est neque veritatis odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio aliquam quos accusamus quibusdam obcaecati sunt asperiores voluptatibus? Dolorem reprehenderit repellat laborum, mollitia quis, modi sint libero aut porro explicabo officia.</p>
