--- a/HTML5-CSS3/Modulo04/projects/social/index.html
+++ b/HTML5-CSS3/Modulo04/projects/social/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Network</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>Social Network</h1>
+    <main>
+        <section id="smartphone">
+
+        </section>
+        <section id="social-network-menu">
+
+        </section>
+    </main>
 </body>
 </html>
