--- a/HTML5-CSS3/Modulo04/projects/social/index.html
+++ b/HTML5-CSS3/Modulo04/projects/social/index.html
@@ -11,10 +11,29 @@
 <body>
     <main>
         <section id="smartphone">
-            <iframe src="home.html" name="screen" id="screen" frameborder="0"></iframe>
+            <iframe src="pages/home.html" name="screen" id="screen" frameborder="0">
+                Your browser does not support this feature.
+            </iframe>
         </section>
         <section id="social-network-menu">
-
+            <a href="pages/home.html" target="screen">
+                <img src="assets/images/logo-home.jpg" alt="logo-home">
+            </a><br>
+            <a href="pages/youtube.html" target="screen">
+                <img src="assets/images/logo-youtube.jpg" alt="logo-youtube">
+            </a><br>
+            <a href="pages/github.html" target="screen">
+                <img src="assets/images/logo-github.jpg" alt="logo-github">
+            </a><br>
+            <a href="pages/instagram.html" target="screen">
+                <img src="assets/images/logo-instagram.jpg" alt="logo-instagram">
+            </a><br>
+            <a href="pages/twitter.html" target="screen">
+                <img src="assets/images/logo-twitter.jpg" alt="logo-twitter">
+            </a><br>
+            <a href="pages/facebook.html" target="screen">
+                <img src="assets/images/logo-facebook.jpg" alt="logo-facebook">
+            </a>
         </section>
     </main>
 </body>
