--- a/HTML5-CSS3/Modulo04/projects/social/pages/facebook.html
+++ b/HTML5-CSS3/Modulo04/projects/social/pages/facebook.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Facebook</title>
     <style>
         * {
             margin: 0px;
@@ -15,11 +15,10 @@
         body {
             height: 100vh;
             width: 100vw;
-            background: black url(assets/images/tela-home.jpg) no-repeat top center;
+            background: black url(../assets/images/tela-facebook.jpg) no-repeat top center;
             background-size: cover;
         }
-
-    </style>
+    </style> 
 </head>
 <body>
 </body>
