--- a/HTML5-CSS3/Modulo04/projects/social/index.html
+++ b/HTML5-CSS3/Modulo04/projects/social/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Network</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="styles/style.css" media="screen">
+    <link rel="stylesheet" href="styles/media-query.css" media="screen">
 </head>
 <body>
     <main>
@@ -18,19 +19,19 @@
         <section id="social-network-menu">
             <a href="pages/home.html" target="screen">
                 <img src="assets/images/logo-home.jpg" alt="logo-home">
-            </a><br>
+            </a>
             <a href="pages/youtube.html" target="screen">
                 <img src="assets/images/logo-youtube.jpg" alt="logo-youtube">
-            </a><br>
+            </a>
             <a href="pages/github.html" target="screen">
                 <img src="assets/images/logo-github.jpg" alt="logo-github">
-            </a><br>
+            </a>
             <a href="pages/instagram.html" target="screen">
                 <img src="assets/images/logo-instagram.jpg" alt="logo-instagram">
-            </a><br>
+            </a>
             <a href="pages/twitter.html" target="screen">
                 <img src="assets/images/logo-twitter.jpg" alt="logo-twitter">
-            </a><br>
+            </a>
             <a href="pages/facebook.html" target="screen">
                 <img src="assets/images/logo-facebook.jpg" alt="logo-facebook">
             </a>
