--- a/HTML5-CSS3/Modulo04/projects/social/pages/github.html
+++ b/HTML5-CSS3/Modulo04/projects/social/pages/github.html
@@ -15,7 +15,7 @@
         body {
             height: 100vh;
             width: 100vw;
-            background: black url(../assets/images/tela-github.jpg) no-repeat top center;
+            background: rgb(255, 255, 255) url(../assets/images/tela-github.jpg) no-repeat top center;
             background-size: cover;
         }
     </style> 
