--- a/HTML5-CSS3/Modulo04/projects/social/pages/facebook.html
+++ b/HTML5-CSS3/Modulo04/projects/social/pages/facebook.html
@@ -5,21 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        body {
-            height: 100vh;
-            width: 100vw;
-            background: rgb(255, 255, 255) url(../assets/images/tela-facebook.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style> 
+    <link rel="stylesheet" href="../styles/social.css">
 </head>
 <body>
+    <img src="../assets/images/tela-facebook.jpg" alt="yotube">
+    <a href="https://facebook.com/davikalel.andradeteixeira" target="_blank">ACESSE</a>
 </body>
 </html>
