--- a/HTML5-CSS3/Modulo04/projects/social/pages/github.html
+++ b/HTML5-CSS3/Modulo04/projects/social/pages/github.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        body {
-            height: 100vh;
-            width: 100vw;
-            background: rgb(255, 255, 255) url(../assets/images/tela-github.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style> 
+    <title>Youtube</title>
+    <link rel="stylesheet" href="../styles/social.css">
 </head>
 <body>
+    <img src="../assets/images/tela-github.jpg" alt="yotube">
+    <a href="https://github.com/dkat-davi" target="_blank">ACESSE</a>
 </body>
 </html>
