--- a/HTML5-CSS3/Modulo04/projects/social/pages/twitter.html
+++ b/HTML5-CSS3/Modulo04/projects/social/pages/twitter.html
@@ -5,21 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        body {
-            height: 100vh;
-            width: 100vw;
-            background: black url(../assets/images/tela-twitter.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style> 
+    <link rel="stylesheet" href="../styles/social.css">
 </head>
 <body>
+    <img src="../assets/images/tela-twitter.jpg" alt="yotube">
+    <a href="https://www.linkedin.com/in/dkat-davi/" target="_blank">ACESSE</a>
 </body>
 </html>
