--- a/HTML5-CSS3/Modulo04/exercises/forms/form001.html
+++ b/HTML5-CSS3/Modulo04/exercises/forms/form001.html
@@ -15,7 +15,7 @@
     <h1>My first form</h1>
 
     <form action="registration.php" method="post">
-        <label for="name">Name*:</label>
+        <label for="name">Name:</label>
         <input type="text" name="name" id="name" required>
         
         <label for="surname">Surname:</label>
