--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/index.html
@@ -7,11 +7,12 @@
     <title>Responsive Menu</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
-<body>
+<body onresize="changeSize()">
     <header>
         <h1>Responsive Menu</h1>
-        <span id="icon-menu" class="material-symbols-outlined">
+        <span id="icon-menu" class="material-symbols-outlined" onclick="clickMenu()">
             menu
         </span>
         <menu id="mnu">
@@ -44,24 +45,26 @@
     </main>
 
     <script>
-
-        iconMenu = document.getElementById('icon-menu');
-        iconMenu.addEventListener("click", clickMenu);
-
         var verificator = 0
 
         function clickMenu() {
 
-            if (verificator == 0) {
+            if (mnu.style.display == 'none') {
                 mnu.style.display = 'block';
-                verificator = 1;
             }
             else {
                 mnu.style.display = 'none';
-                verificator = 0;
             }   
         }
 
+        function changeSize() {
+            if (window.innerWidth >= 768) {
+                mnu.style.display = 'block'
+            }
+            else {
+                mnu.style.display = 'none';
+            }
+        }
         
     </script>
 </body>
