--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <main>
@@ -17,7 +18,7 @@
                 <h1>Login</h1>
                 <p>Welcome back, login to acess your account</p>
                 <form action="" method="post">
-                    
+
                 </form>
             </div>
         </section>
