--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <main>
@@ -17,8 +18,18 @@
             <div id="forms">
                 <h1>Login</h1>
                 <p>Welcome back, login to acess your account</p>
-                <form action="" method="post">
-
+                
+                <form action="" method="post" autocomplete="on">
+                    <div class="field">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Your email" autocomplete="email" aria-label="Login" required maxlength="30">
+                    </div>
+                    <div class="field">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="passwd" id="passwd" placeholder="Your password" autocomplete="current-password" aria-label="Password" required minlength="8" maxlength="12">
+                    </div>
+                    <input type="submit" value="Login">
+                    <a href="forget.html">Forget password <span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
