Finish responsive login

--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
@@ -19,7 +19,7 @@
                 <h1>Login</h1>
                 <p>Welcome back, login to acess your account</p>
                 
-                <form action="" method="post" autocomplete="on">
+                <form action="" method="get" autocomplete="on">
                     <div class="field">
                         <span class="material-symbols-outlined">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="Your email" autocomplete="email" aria-label="Login" required maxlength="30">
