--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/index.html
@@ -29,7 +29,7 @@
                         <input type="password" name="passwd" id="passwd" placeholder="Your password" autocomplete="current-password" aria-label="Password" required minlength="8" maxlength="12">
                     </div>
                     <input type="submit" value="Login">
-                    <a href="forget.html" class="btn"><p>Forget password</p>  <span class="material-symbols-outlined">mail</span></a>
+                    <a href="forget.html" class="btn"><p>Forgot password</p>  <span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
